@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.14)
 
 project(fives)
 
-# Project options
+##### Project options
+
 # Whether to build dependencies (simgrid, wrench, ...) inside project tree 
 option(BUILD_DEPENDENCIES "Build dependencies (local to project)" OFF)
+
 # Whether to use sustem libs (simgrid, wrench, ...) instead of local build of dependencies
 option(USE_SYSTEM_LIBS "Use system libraries instead of local dependencies" OFF)
+
+##### Variables
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules")
 
@@ -33,10 +37,10 @@ endif ()
 # Commit/tag version for each dependency to build from source
 set(NLOHMANNJSON_GIT_REF "v3.11.3")
 set(YAMLCPP_GIT_REF "0.8.0")
-set(GOOGLETEST_GIT_REF "main")                  # googletest recommands to  always use the latest commit on main
+set(GOOGLETEST_GIT_REF "main")                                                   # googletest recommands to  always use the latest commit on main
 set(SIMGRID_GIT_REF "v3.36")
-set(FSMOD_GIT_REF "v0.2")                       # or maybe we should use 'main'
-set(WRENCH_GIT_REF "origin/master")             # we should/could be using an official release, but we often need cutting edge WRENCH fixes/features
+set(FSMOD_GIT_REF "v0.2")                                                        # or maybe we should use 'main'
+set(WRENCH_GIT_REF "aa2804e085fa3094db8b8d423f4d710e3b7dcca8")                   # That's slightly above v2.5 but with a typo fixed in CMakeLists.txt
 
 # WARNING : this is the date at CONFIG time (when 'cmake ..' is run, not when building the project)
 string(TIMESTAMP TODAY "%Y%m%d")
@@ -47,15 +51,48 @@ set(EXTERNAL_DIR ${CMAKE_SOURCE_DIR}/external CACHE PATH "Directory for external
 set(LOCAL_INSTALL_DIR ${EXTERNAL_DIR}/install_deps CACHE PATH "Top level local installation directory for dependencies")
 set(LOCAL_INSTALL_LIB ${LOCAL_INSTALL_DIR}/lib CACHE PATH "Local path for libraries from dependencies")
 set(LOCAL_INSTALL_INCLUDE ${LOCAL_INSTALL_DIR}/include CACHE PATH "Local path for includes from dependencies")
-file(MAKE_DIRECTORY ${EXTERNAL_DIR})
-file(MAKE_DIRECTORY ${LOCAL_INSTALL_DIR})
-file(MAKE_DIRECTORY ${LOCAL_INSTALL_LIB})
-file(MAKE_DIRECTORY ${LOCAL_INSTALL_INCLUDE})
 
-# Number of cores to use to build projects.
-set(NUM_CORES "3") 
 
-#### Setup dependencies
+##### Source files and target setup
+
+# Set the list of source files
+set(HEADER_FILES
+    include/Controller.h
+    include/Simulator.h
+    include/Platform.h
+    include/AllocationStrategy.h
+    include/JobDefinition.h
+    include/ConfigDefinition.h
+    include/Utils.h
+    include/Constants.h
+    include/BuildInfo.h         # Generated by CMake from include/BuildInfo.h.in
+)
+
+set(SOURCE_FILES
+    src/Controller.cpp
+    src/Simulator.cpp
+    src/Platform.cpp
+    src/AllocationStrategy.cpp
+    src/JobDefinition.cpp
+    src/ConfigDefinition.cpp
+    src/Utils.cpp
+)
+
+set(TEST_FILES
+    test/main.cpp
+    test/FunctionalTest.cpp
+    test/AllocationStrategyTest.cpp
+    test/UtilsTest.cpp
+    test/include/TestWithFork.h
+    test/include/UniqueTmpPathPrefix.h
+    test/include/TestConstants.h
+)
+
+
+
+#####  Dependencies setup
+
+## "Automatic" mode:
 # -> Boost is supposed to be always installed system-wide by the user (outside of this repository),
 #    because it's very heavy and not version-critical for us
 # -> Similarly, nlohmann/json, yaml-cpp and GTest are added to the project via simple FetchContent
@@ -63,6 +100,10 @@ set(NUM_CORES "3")
 # -> Lastly, SimGrid, FSMod and WRENCH are added via ExternalProject, so that we have full control over
 #    their sources and are able to update / rebuild them manually if needed.
 # Note that some optional dependencies (for instance for WRENCH) are not required by this project and thus ignored.
+
+## Manual mode:
+# -> use find_package / find_library for all dependencies and assume they were installed on the system before configuring
+#    building Fives
 
 # Find Boost (and silencing a warning coming from a deprecated FindBoost module)
 if(POLICY CMP0167)
@@ -73,11 +114,29 @@ find_package(Boost REQUIRED)
 # Fetch / Build other dependencies if required.
 if (NOT USE_SYSTEM_LIBS AND BUILD_DEPENDENCIES)
 
+    # Ensure the directories where we'll build the dependencies from source do exist
+    file(MAKE_DIRECTORY ${EXTERNAL_DIR})
+    file(MAKE_DIRECTORY ${LOCAL_INSTALL_DIR})
+    file(MAKE_DIRECTORY ${LOCAL_INSTALL_LIB})
+    file(MAKE_DIRECTORY ${LOCAL_INSTALL_INCLUDE})
+
+    # Let cmake know about these directories when building/linking any dependency 
+    # (necessary because of the 'ExternalProject' module usage)
+    include_directories(${LOCAL_INSTALL_DIR}/include)
+    link_directories(${LOCAL_INSTALL_DIR}/lib)
+
+    # Number of cores to use to build (variable is useless if you are not building the dependencies
+    # and you should use  'cmake --build . --parallel=X' or 'make -j X' to configure // for Fives only)
+    if (NOT NUM_CORES)
+        set(NUM_CORES "3") 
+    endif()
+    message(STATUS "Using ${NUM_CORES} processes for the compilation of the dependencies")
+
     # Module includes
     include(FetchContent)
     include(ExternalProject)
 
-    set(FETCHCONTENT_TRY_FIND_PACKAGE_MODE "NEVER")
+    set(FETCHCONTENT_TRY_FIND_PACKAGE_MODE "NEVER") # The whole point here is to avoid using system libraries
 
     # nlohmann/json - no need to manually rebuild during dev, so we don't care where cmake builds and install this
     FetchContent_Declare(
@@ -100,6 +159,8 @@ if (NOT USE_SYSTEM_LIBS AND BUILD_DEPENDENCIES)
         GIT_REPOSITORY      https://github.com/google/googletest
         GIT_TAG             ${GOOGLETEST_GIT_REF}
     )
+
+    # Make all FetchContent related dependencies available (config time)
     FetchContent_MakeAvailable(nlohmann_json yaml-cpp gtest)
 
     # SimGrid - builds in source, as mandated by the project at this time
@@ -146,7 +207,7 @@ if (NOT USE_SYSTEM_LIBS AND BUILD_DEPENDENCIES)
         wrench
         GIT_REPOSITORY https://github.com/wrench-project/wrench
         GIT_TAG        ${WRENCH_GIT_REF}
-        GIT_SHALLOW    ON                                                                   # Comment out if entire repository is required instead
+        # GIT_SHALLOW    ON                                                                 # Cannot be used when trying to checkout a specific commit hash
         DEPENDS        simgrid fsmod
         SOURCE_DIR     ${EXTERNAL_DIR}/wrench
         INSTALL_DIR    ${LOCAL_INSTALL_DIR}
@@ -162,65 +223,94 @@ if (NOT USE_SYSTEM_LIBS AND BUILD_DEPENDENCIES)
         INTERFACE_INCLUDE_DIRECTORIES ${LOCAL_INSTALL_INCLUDE}
     )
 
-    set(SIMGRID_GIT_REF ${simgrid_libsimgrid_version})
-    set(FSMOD_GIT_REF ${fsmod_})                       
-    set(WRENCH_GIT_REF ${wrench_WRENCH_RELEASE_VERSION})
+    # If someone needs to build dependencies only
     add_custom_target(dependencies DEPENDS nlohmann_json gtest yaml-cpp simgrid_lib fsmod_lib wrench_lib)
 
 elseif(USE_SYSTEM_LIBS)
 
+    ### Make sure user is not confused about which libs will be used
     if (USE_SYSTEM_LIBS AND NOT BUILD_DEPENDENCIES)
         message(STATUS "USE_SYSTEM_LIBS is ON, and BUILD_DEPENDENCIES is OFF, attempting to use system libs (make sure the installed versions are correct)")
     else()
         message(WARNING "BUILD_DEPENDENCIES is ON, but USE_SYSTEM_LIBS is also ON. No dependencies will be built.")
     endif()
 
+
+    ### Find SimGrid
+    if (DEFINED SimGrid_PATH)
+    message(STATUS "Looking for SimGrid at ${SimGrid_PATH}")
+    if (NOT EXISTS "${SimGrid_PATH}")
+        message(FATAL_ERROR "The specified SimGrid_PATH doesn't exit")
+    else()
+        file(GLOB LIBSIMGRID_FILES
+                "${SimGrid_PATH}/lib/libsimgrid.so"
+                "${SimGrid_PATH}/lib/libsimgrid.dylib"
+            )
+        if (NOT LIBSIMGRID_FILES)
+            message(FATAL_ERROR "The specified SimGrid_PATH doesn't seem to contain a valid SimGrid installation")
+        else()
+            set(CMAKE_PREFIX_PATH ${SimGrid_PATH} ${CMAKE_PREFIX_PATH})
+        endif()
+    endif()
+    endif()
+    find_package(SimGrid REQUIRED)
+
+
+    ### Find SimGrid's FS module
+    if (DEFINED FSMOD_PATH)
+    message(STATUS "Looking for FSMod at ${FSMOD_PATH}")
+    if (NOT EXISTS "${FSMOD_PATH}")
+        message(FATAL_ERROR "The specified FSMOD_PATH doesn't exit")
+    else()
+        file(GLOB LIBFSMOD_FILES
+                "${FSMOD_PATH}/lib/libfsmod.so"
+                "${FSMOD_PATH}/lib/libfsmod.dylib"
+                )
+        if (NOT LIBFSMOD_FILES)
+            message(FATAL_ERROR "The specified FSMOD_PATH doesn't seem to contain a valid FSMod installation")
+        else()
+            set(CMAKE_PREFIX_PATH ${FSMOD_PATH} ${CMAKE_PREFIX_PATH})
+        endif()
+    endif()
+    endif()
+    find_package(FSMod REQUIRED)
+
+
+    ### Find WRENCH
+    if (DEFINED WRENCH_PATH)
+    message(STATUS "Looking for WRENCH at ${WRENCH_PATH}")
+    if (NOT EXISTS "${WRENCH_PATH}")
+        message(FATAL_ERROR "The specified WRENCH_PATH doesn't exit")
+    else()
+        file(GLOB LIBFSMOD_FILES
+                "${WRENCH_PATH}/lib/libwrench.a"
+                )
+        if (NOT LIBFSMOD_FILES)
+            message(FATAL_ERROR "The specified WRENCH_PATH doesn't seem to contain a valid WRENCH installation")
+        else()
+            set(CMAKE_PREFIX_PATH ${WRENCH_PATH} ${CMAKE_PREFIX_PATH})
+        endif()
+    endif()
+    endif()
+    find_package(WRENCH REQUIRED)
+
+    ### Find yaml-cpp
+    find_library(YAML_CPP_LIBRARY REQUIRED NAMES yaml-cpp)
+
+    # For version information displayed inside Fives.
+    set(SIMGRID_GIT_REF "SYSTEM")
+    set(FSMOD_GIT_REF "SYSTEM")                       
+    set(WRENCH_GIT_REF "SYSTEM")
+
 else()
 
+    # Impossible case, we would not have any depenencies available
     message(ERROR "USE_SYSTEM_LIBS and BUILD_DEPENDENCIES are OFF, we can't build Fives.")
 
 endif() 
 
 
-# Main target: Fives
-
-# Set the list of source files
-set(HEADER_FILES
-    include/Controller.h
-    include/Simulator.h
-    include/Platform.h
-    include/AllocationStrategy.h
-    include/JobDefinition.h
-    include/ConfigDefinition.h
-    include/Utils.h
-    include/Constants.h
-    include/BuildInfo.h         # Generated by CMake from include/BuildInfo.h.in
-)
-
-set(SOURCE_FILES
-    src/Controller.cpp
-    src/Simulator.cpp
-    src/Platform.cpp
-    src/AllocationStrategy.cpp
-    src/JobDefinition.cpp
-    src/ConfigDefinition.cpp
-    src/Utils.cpp
-    src/main.cpp
-)
-
-set(TEST_FILES
-    test/main.cpp
-    test/FunctionalTest.cpp
-    test/AllocationStrategyTest.cpp
-    test/UtilsTest.cpp
-    test/include/TestWithFork.h
-    test/include/UniqueTmpPathPrefix.h
-    test/include/TestConstants.h
-)
-
-# Necessary because of the 'ExternalProject'-based dependencies
-include_directories(${LOCAL_INSTALL_DIR}/include)
-link_directories(${LOCAL_INSTALL_DIR}/lib)
+##### Prepare main target: Fives
 
 configure_file(include/BuildInfo.h.in ${CMAKE_SOURCE_DIR}/include/BuildInfo.h)
 
@@ -228,6 +318,7 @@ add_executable(
     fives 
     ${HEADER_FILES}
     ${SOURCE_FILES}
+    src/main.cpp        # outside because it should not be included when building tests
 )
 
 add_definitions(
@@ -239,74 +330,68 @@ target_compile_options(fives PRIVATE
     $<$<CONFIG:Release>:-O3>
 )
 
-# Add target libraries depending on whether we build evertyhting inside the repo or 
-# using system-wide dependencies
-if (USE_SYSTEM_LIBS)
+install(TARGETS fives DESTINATION bin)
 
-    # Find SimGrid
-    if (DEFINED SimGrid_PATH)
-        message(STATUS "Looking for SimGrid at ${SimGrid_PATH}")
-        if (NOT EXISTS "${SimGrid_PATH}")
-            message(FATAL_ERROR "The specified SimGrid_PATH doesn't exit")
-        else()
-            file(GLOB LIBSIMGRID_FILES
-                    "${SimGrid_PATH}/lib/libsimgrid.so"
-                    "${SimGrid_PATH}/lib/libsimgrid.dylib"
-                )
-            if (NOT LIBSIMGRID_FILES)
-                message(FATAL_ERROR "The specified SimGrid_PATH doesn't seem to contain a valid SimGrid installation")
-            else()
-                set(CMAKE_PREFIX_PATH ${SimGrid_PATH} ${CMAKE_PREFIX_PATH})
-            endif()
-        endif()
-    endif()
-    find_package(SimGrid REQUIRED)
+##### Add link / include information to Fives target and configure test target 
+#     depending on where our dependencies come from
 
-    # Find SimGrid's FS module
-    if (DEFINED FSMOD_PATH)
-        message(STATUS "Looking for FSMod at ${FSMOD_PATH}")
-        if (NOT EXISTS "${FSMOD_PATH}")
-            message(FATAL_ERROR "The specified FSMOD_PATH doesn't exit")
-        else()
-            file(GLOB LIBFSMOD_FILES
-                    "${FSMOD_PATH}/lib/libfsmod.so"
-                    "${FSMOD_PATH}/lib/libfsmod.dylib"
-                    )
-            if (NOT LIBFSMOD_FILES)
-                message(FATAL_ERROR "The specified FSMOD_PATH doesn't seem to contain a valid FSMod installation")
-            else()
-                set(CMAKE_PREFIX_PATH ${FSMOD_PATH} ${CMAKE_PREFIX_PATH})
-            endif()
-        endif()
-    endif()
-    find_package(FSMod REQUIRED)
+if (NOT USE_SYSTEM_LIBS AND BUILD_DEPENDENCIES)
 
-    # Find WRENCH
-    if (DEFINED WRENCH_PATH)
-        message(STATUS "Looking for WRENCH at ${WRENCH_PATH}")
-        if (NOT EXISTS "${WRENCH_PATH}")
-            message(FATAL_ERROR "The specified WRENCH_PATH doesn't exit")
-        else()
-            file(GLOB LIBFSMOD_FILES
-                    "${WRENCH_PATH}/lib/libwrench.a"
-                    )
-            if (NOT LIBFSMOD_FILES)
-                message(FATAL_ERROR "The specified WRENCH_PATH doesn't seem to contain a valid WRENCH installation")
-            else()
-                set(CMAKE_PREFIX_PATH ${WRENCH_PATH} ${CMAKE_PREFIX_PATH})
-            endif()
-        endif()
-    endif()
-    find_package(WRENCH REQUIRED)
+    #### Setup link/includes for Fives
 
-    find_library(YAML_CPP_LIBRARY NAMES yaml-cpp)
+    target_include_directories(fives PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+        ${LOCAL_INSTALL_DIR}/include
+    )
+
+    target_link_libraries(fives PRIVATE
+        wrench_lib
+        simgrid_lib
+        fsmod_lib
+        yaml-cpp
+    )
+
+    ##### Unit Tests target
+
+    # Also building tests because gtest is always part of installed dependencies in this case
+    add_definitions(-DGTEST_USED)
+
+    add_executable(
+        unit_tests
+        EXCLUDE_FROM_ALL    # don't build as part of the 'all' default target
+        ${TEST_FILES}
+        ${SOURCE_FILES}
+        ${HEADER_FILES}
+    )
+
+    target_include_directories(unit_tests PRIVATE
+        ${CMAKE_SOURCE_DIR}/include
+        ${LOCAL_INSTALL_DIR}/include
+    )
+
+    target_link_libraries(unit_tests
+        wrench_lib
+        simgrid_lib
+        fsmod_lib
+        yaml-cpp
+        gtest
+        pthread # Necessary on Debian for some reason
+    )
+
+    set_target_properties(unit_tests PROPERTIES COMPILE_FLAGS "-g -O0 --coverage")
+    set_target_properties(unit_tests PROPERTIES LINK_FLAGS "--coverage")
+    add_custom_command(TARGET unit_tests POST_BUILD COMMAND find . -name *.gcda -delete)
+
+else()
 
     target_link_libraries(fives
-            ${WRENCH_LIBRARY}
-            ${SimGrid_LIBRARY}
-            ${YAML_CPP_LIBRARY}
-            ${FSMOD_LIBRARY}
+        WRENCH::WRENCH
+        FSMOD::FSMOD
+        SimGrid::SimGrid
+        ${YAML_CPP_LIBRARY}
+        pthread # Necessary on Debian for some reason
     )
+
     target_include_directories(fives PRIVATE
         ${CMAKE_SOURCE_DIR}/include
         /usr/include,  
@@ -318,52 +403,44 @@ if (USE_SYSTEM_LIBS)
         /usr/include /usr/local/include /opt/local/include
     )
 
-else()
+    find_library(GTEST_LIBRARY NAMES gtest)
+    if(GTEST_LIBRARY)
 
-    target_link_libraries(fives PRIVATE
-        wrench_lib
-        simgrid_lib
-        fsmod_lib
-        yaml-cpp
-    )
+        add_definitions(-DGTEST_USED)
 
-    target_include_directories(fives PRIVATE
-        ${CMAKE_SOURCE_DIR}/include
-        ${LOCAL_INSTALL_DIR}/include
-    )
+        add_executable(
+            unit_tests
+            EXCLUDE_FROM_ALL    # don't build as part of the 'all' default target
+            ${TEST_FILES}
+            ${SOURCE_FILES}
+            ${HEADER_FILES}
+        )
+
+        target_include_directories(unit_tests PRIVATE
+            ${CMAKE_SOURCE_DIR}/include
+            /usr/include,  
+            /opt/simgrid, # suggested by simgrid as installation directory
+            ${SimGrid_INCLUDE_DIR} 
+            ${Boost_INCLUDE_DIR} 
+            ${FSMOD_INCLUDE_DIR} 
+            ${WRENCH_INCLUDE_DIR} 
+            /usr/include /usr/local/include /opt/local/include
+        )
+
+        target_link_libraries(unit_tests
+            WRENCH::WRENCH
+            FSMOD::FSMOD
+            SimGrid::SimGrid
+            ${YAML_CPP_LIBRARY} 
+            ${GTEST_LIBRARY}
+            pthread # Necessary on Debian for some reason
+        )
+
+        set_target_properties(unit_tests PROPERTIES COMPILE_FLAGS "-g -O0 --coverage")
+        set_target_properties(unit_tests PROPERTIES LINK_FLAGS "--coverage")
+        add_custom_command(TARGET unit_tests POST_BUILD COMMAND find . -name *.gcda -delete)
+
+    endif()
+
 
 endif()
-
-install(TARGETS fives DESTINATION bin)
-
-
-##### TEST 
-
-# find_library(GTEST_LIBRARY NAMES gtest)
-# if(GTEST_LIBRARY)
-
-#     add_definitions(-DGTEST_USED)
-
-#     add_executable(
-#         unit_tests
-#         EXCLUDE_FROM_ALL    # don't build as part of the 'all' default target
-#         ${TEST_FILES}
-#         ${SOURCE_FILES}
-#         ${HEADER_FILES}
-#     )
-
-#     target_link_libraries(unit_tests
-#         gtest
-#         wrench_lib
-#         simgrid_lib
-#         fsmod_lib
-#         yaml-cpp
-#         pthread # Necessary on Debian for some reason
-#     )
-
-#   set_target_properties(unit_tests PROPERTIES COMPILE_FLAGS "-g -O0 --coverage")
-#   set_target_properties(unit_tests PROPERTIES LINK_FLAGS "--coverage")
-#   add_custom_command(TARGET unit_tests POST_BUILD COMMAND find . -name *.gcda -delete)
-
-# endif()
-
