@@ -1,0 +1,17 @@
+#ifndef BUILD_INFO_H
+#define BUILD_INFO_H
+
+#include <string>
+
+// FIVES VERSION
+const std::string fives_version = "0.1";
+// SIMGRID VERSION
+const std::string simgrid_version = "SYSTEM";
+// FSMOD VERSION
+const std::string fsmod_version = "SYSTEM";
+// WRENCH VERSION
+const std::string wrench_version = "SYSTEM";
+// BUILD TIME
+const std::string config_ts = "20250129";
+
+#endif // BUILD_INFO_H
