@@ -1,5 +1,6 @@
 # v0.1.0:
     - Moving to SimGrid 3.36 / WRENCH 2.5 and now integrating the FSMod dependency.
     - Updated CMakeLists.txt for a much better control of dependencies
-    - 
+        - Option to build all dependencies from source inside project (with fixed versions)
+        - OPtion to use system-wide dependencies and build only fives
 
